# PlaylistMaker

./: CMakeLists.txt  LICENSE  README.md  app_win32.rc  icon.qrc  logo.icns  main.cpp  mainwindow.cpp  mainwindow.h
filebrowser/: filebrowserwidget.cpp  filebrowserwidget.h
player/: m3uplaylistwriter.cpp  m3uplaylistwriter.h  player.cpp  player.h  playercontrols.cpp  playlistmodel.cpp  playlistmodel.h  playlistwidget.cpp  playlistwidget.h  qmediaplaylist.cpp  qmediaplaylist.h  qmediaplaylist_p.h  qplaylistfileparser.cpp  qplaylistfileparser_p.h
